tests/testfiles/valid_prog_fails/3_init_string.c
int main() {
    char* yoyo;

    return 34;
}