tests/testfiles/invalid_prog_fails/20_mutli_init.c
int main() {
    int c;
    int c;

    return 3;
}